--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
 </head>
 <body>
   <p>Hello World, I am Aditya Kumar</p>
-  <p>This is a new features </p>
+  <p>This is a new features (dropdown) </p>
 </body>
 </html>
